syntax = "proto3";

package greet;
option go_package = "github.com/vitorbari/grpc-playground/06-greet-client-streaming-golang/greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService{
  rpc Greet(stream LongGreetRequest) returns (GreetResponse) {};
}
